# Lion-Launcher

./: Cargo.toml  README.md  build-release.sh  build-windows.bat  tauri.conf.json
.cargo/: config.toml
.github/workflows/: build-release.yml  release.yml
capabilities/: default.json
flatpak/: com.lionlauncher.dev.ci.yml  com.lionlauncher.dev.desktop  com.lionlauncher.dev.metainfo.xml  com.lionlauncher.dev.yml
icons/: icon.icns
pkg/: PKGBUILD
scripts/: dev.sh  release.sh  setup-host.sh  verify.sh
snap/: snapcraft.yaml
src/: main.rs
src/api/: client.rs  curseforge.rs  fabric.rs  forge.rs  forge_compat.rs  mod.rs  modrinth.rs  mojang.rs  neoforge.rs  quilt.rs
src/config/: defaults.rs  schema.rs
src/core/: mod.rs
src/core/auth/: mod.rs
src/core/download/: mod.rs
src/core/fs/: mod.rs
src/core/minecraft/: forge.rs  installer.rs  loader.rs  mod.rs  neoforge.rs  worlds.rs
src/core/mods/: mod.rs
src/core/profiles/: mod.rs
src/gui/: auth.rs  mod.rs  mod_browser.rs  profile_manager.rs  settings.rs
src/gui/components/: mod.rs
src/gui/themes/: mod.rs
src/types/: mod.rs  mod_info.rs  platform.rs  profile.rs  version.rs
src/utils/: compression.rs  error.rs  logging.rs  mod.rs  threading.rs
ui/: app.js  i18n.js  index.html  styles.css
