[package]
name = "Lion-Launcher"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
config = "0.13"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
flate2 = "1.0"
zip = "0.6"
rayon = "1.7"
bytes = "1"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
urlencoding = "2.1"
once_cell = "1.19"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization
strip = true           # Strip debug symbols
panic = "abort"        # Smaller binary size


